--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "joyful_cloud",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://SerhiiYan.github.io/joyful_cloud",
+  "homepage": "https://serhiiyan.github.io/joyful_cloud",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
